MDEV-9667: Server hangs after select count(distinct name) from t2 where a=8366 and b>=5 and b<=5;

In row_search_for_mysql function on XtraDB there was a old logic
where null bytes were inited. This caused server to think that
key value is null and continue on incorrect path.